[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/buttons/button_xbox_digital_a_4.png" type="Texture" id=1]
[ext_resource path="res://assets/buttons/button_xbox_digital_a_5.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/button_xbox_digital_b_4.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/button_xbox_digital_b_5.png" type="Texture" id=4]
[ext_resource path="res://scenes/big_card.gd" type="Script" id=5]
[ext_resource path="res://assets/buttons/button_xbox_digital_menu_2.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/button_xbox_digital_x_5.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/button_xbox_digital_menu_1.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/button_xbox_digital_view_1.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/button_xbox_digital_x_4.png" type="Texture" id=10]
[ext_resource path="res://assets/buttons/button_xbox_digital_view_2.png" type="Texture" id=11]

[node name="father" type="Sprite"]
script = ExtResource( 5 )

[node name="button_up_1" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="button_up_2" type="TextureButton" parent="."]
margin_left = 126.0
margin_right = 606.0
margin_bottom = 480.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="button_up_3" type="TextureButton" parent="."]
margin_left = 253.0
margin_right = 733.0
margin_bottom = 480.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="button_up_4" type="TextureButton" parent="."]
margin_left = 381.0
margin_right = 861.0
margin_bottom = 480.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="button_up_5" type="TextureButton" parent="."]
margin_left = 509.0
margin_right = 989.0
margin_bottom = 480.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="button_up_6" type="TextureButton" parent="."]
margin_left = 637.0
margin_right = 1117.0
margin_bottom = 480.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="number_1" type="Label" parent="."]
margin_left = 64.0
margin_top = 155.0
margin_right = 83.0
margin_bottom = 169.0
text = "0"
align = 1
valign = 1

[node name="number_2" type="Label" parent="."]
margin_left = 188.0
margin_top = 155.0
margin_right = 207.0
margin_bottom = 169.0
text = "0"
align = 1
valign = 1

[node name="number_3" type="Label" parent="."]
margin_left = 315.0
margin_top = 155.0
margin_right = 334.0
margin_bottom = 169.0
text = "0"
align = 1
valign = 1

[node name="number_4" type="Label" parent="."]
margin_left = 442.0
margin_top = 155.0
margin_right = 461.0
margin_bottom = 169.0
text = "0"
align = 1
valign = 1

[node name="number_5" type="Label" parent="."]
margin_left = 573.0
margin_top = 155.0
margin_right = 592.0
margin_bottom = 169.0
text = "0"
align = 1
valign = 1

[node name="number_6" type="Label" parent="."]
margin_left = 701.0
margin_top = 155.0
margin_right = 720.0
margin_bottom = 169.0
text = "0"
align = 1
valign = 1

[node name="button_down_1" type="TextureButton" parent="."]
margin_top = 168.0
margin_right = 480.0
margin_bottom = 648.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="button_down_2" type="TextureButton" parent="."]
margin_left = 128.0
margin_top = 168.0
margin_right = 608.0
margin_bottom = 648.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="button_down_3" type="TextureButton" parent="."]
margin_left = 256.0
margin_top = 168.0
margin_right = 736.0
margin_bottom = 648.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="button_down_4" type="TextureButton" parent="."]
margin_left = 384.0
margin_top = 168.0
margin_right = 864.0
margin_bottom = 648.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="button_down_5" type="TextureButton" parent="."]
margin_left = 512.0
margin_top = 168.0
margin_right = 992.0
margin_bottom = 648.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="button_down_6" type="TextureButton" parent="."]
margin_left = 640.0
margin_top = 168.0
margin_right = 1120.0
margin_bottom = 648.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="button_random" type="TextureButton" parent="."]
margin_left = 800.0
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 504.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )

[node name="button_sequence" type="TextureButton" parent="."]
margin_left = 800.0
margin_top = 112.0
margin_right = 1280.0
margin_bottom = 592.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 7 )

[node name="button_repeat" type="TextureButton" parent="."]
margin_left = 800.0
margin_top = 200.0
margin_right = 1280.0
margin_bottom = 680.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )
